--- a/_css/main.css
+++ b/_css/main.css
@@ -8,8 +8,13 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 html, body  {
+background-color:#bee5f4;
 	margin: 0;
 }
+h1  { 
+color: darkred;
+}
+
 /* Correct `block` display not defined in IE 8/9.*/
 article,aside,details,figcaption,figure,footer,header,main,nav,section,summary {
   display: block;
